--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <h1>Ricardo Kenny</h1>
 
-  <img src="C:\Users\Admin\Documents\rlkennye.github.io\50935834.png" alt="Kenny Ricardo">
+  <img src="https://avatars1.githubusercontent.com/u/50935834?s=460&v=4" alt="Kenny Ricardo">
 
   <p>Write a short paragraph about yourself or some placeholder text.</p>
   <p>A second short paragraph about yourself or some placeholder text.</p>
