Adds background colors

--- a/Web-Visualization-Dashboard/wind_speed.html
+++ b/Web-Visualization-Dashboard/wind_speed.html
@@ -18,7 +18,7 @@
   <!-- Navigation Section -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" style="background-color: #0BADA6;" href="index.html">Latitude</a>
+      <a class="navbar-brand" style="background-color: #ada60b;" href="index.html">Latitude</a>
       <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
         <div class="box">
           <h3 class="title">Wind Speed</h3>
           <hr>
-          <img src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+          <img src="Resources/assets/images/WindSpeedInWorldCities.png" alt="Wind Speed Graph">
           <p>Wind speed appears to slightly increase as we move away from the equator. However, to conclusively
             describe a pattern, we would need to go beyond the range in data to reach cities at closer to the poles.
             Only then can we have a sample large to confirm the pattern.</p>
@@ -71,24 +71,24 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="max_temperature.html">
-                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
+                  <img class="panel" src="Resources/assets/images/TemperatureInWorldCities.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-6">
                 <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                  <img class="panel" src="Resources/assets/images/HumidityInWorldCities.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="cloudiness.html">
-                  <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Resources/assets/images/CloudinessInWorldCities.png" alt="Cloudiness Graph">
                 </a>
               </div>
               <div class="col-6">
                 <a href="wind_speed.html">
-                  <img class="panel active" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                  <img class="panel active" src="Resources/assets/images/WindSpeedInWorldCities.png" alt="Wind Speed Graph">
                 </a>
               </div>
             </div>
@@ -99,7 +99,7 @@
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Copyright &copy; Gabriela Cantu 2018</div>
+    <div class="footer">Copyright &copy; Ricardo L Kenny 2019</div>
   </footer>
 
   <!-- Bootstrap JS -->
