--- a/Web-Visualization-Dashboard/comparisons.html
+++ b/Web-Visualization-Dashboard/comparisons.html
@@ -20,7 +20,7 @@
   <!-- Navigation Section -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" style="background-color: #0BADA6;" href="index.html">Latitude</a>
+      <a class="navbar-brand" style="background-color: #ada60b;" href="index.html">Latitude</a>
       <button class="navbar-toggler  border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -64,13 +64,13 @@
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Max Temperature</div>
                 <a href="max_temperature.html">
-                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
+                  <img class="panel" src="Resources/assets/images/TemperatureInWorldCities.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Humidity</div>
                 <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                  <img class="panel" src="Resources/assets/images/HumidityInWorldCities.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
@@ -79,14 +79,14 @@
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Cloudiness</div>
                 <a href="cloudiness.html">
-                  <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Resources/assets/images/CloudinessInWorldCities.png" alt="Cloudiness Graph">
                 </a>
 
               </div>
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Wind Speed</div>
                 <a href="wind_speed.html">
-                  <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                  <img class="panel" src="Resources/assets/images/WindSpeedInWorldCities.png" alt="Wind Speed Graph">
                 </a>
               </div>
             </div>
@@ -98,7 +98,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Copyright &copy; Gabriela Cantu 2018</div>
+    <div class="footer">Copyright &copy; Ricardo L Kenny 2019</div>
   </footer>
 
   <!-- Bootstrap JS -->
