--- a/Web-Visualization-Dashboard/max_temperature.html
+++ b/Web-Visualization-Dashboard/max_temperature.html
@@ -20,7 +20,7 @@
   <!-- Navigation Section -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" style="background-color: #0BADA6;" href="index.html">Latitude</a>
+      <a class="navbar-brand" style="background-color: #ada60b;" href="index.html">Latitude</a>
       <button class="navbar-toggler  border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
         <div class="box" style="padding-bottom: 5px;">
           <h3 class="title">Max Temperature</h3>
           <hr>
-          <img src="Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
+          <img src="Resources/assets/images/TemperatureInWorldCities.png" alt="Max Temperature Graph">
           <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude).
             More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the
             year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this
@@ -76,12 +76,12 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="max_temperature.html">
-                  <img class="panel active" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
+                  <img class="panel active" src="Resources/assets/images/TemperatureInWorldCities.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-6">
                 <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                  <img class="panel" src="Resources/assets/images/HumidityInWorldCities.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
@@ -89,12 +89,12 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="cloudiness.html">
-                  <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Resources/assets/images/CloudinessInWorldCities.png" alt="Cloudiness Graph">
                 </a>
               </div>
               <div class="col-6">
                 <a href="wind_speed.html">
-                  <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                  <img class="panel" src="Resources/assets/images/WindSpeedInWorldCities.png" alt="Wind Speed Graph">
                 </a>
               </div>
 
@@ -109,7 +109,7 @@
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Copyright &copy; Gabriela Cantu 2018</div>
+    <div class="footer">Copyright &copy; Ricardo L Kenny 2019</div>
   </footer>
 
   <!-- Bootstrap JS -->
