Adds more background colors

--- a/Web-Visualization-Dashboard/cloudiness.html
+++ b/Web-Visualization-Dashboard/cloudiness.html
@@ -88,7 +88,7 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="cloudiness.html">
-                  <img class="panel active" src="Resources/assets/images/CloudinessInWorldCities.png alt="Cloudiness Graph">
+                  <img class="panel active" src="Resources/assets/images/CloudinessInWorldCities.png" alt="Cloudiness Graph">
                 </a>
               </div>
               <div class="col-6">
