--- a/Web-Visualization-Dashboard/index.html
+++ b/Web-Visualization-Dashboard/index.html
@@ -18,9 +18,9 @@
 
 <body>
   <!-- Navigation Section -->
-  <div class="navigation">#ada60b
+  <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" style="background-color: ;" href="index.html">Latitude</a>
+      <a class="navbar-brand" style="background-color: #ada60b;" href="index.html">Latitude</a>
       <button class="navbar-toggler  border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
