--- a/Web-Visualization-Dashboard/data.html
+++ b/Web-Visualization-Dashboard/data.html
@@ -6646,7 +6646,7 @@
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Copyright &copy; Gabriela Cantu 2018</div>
+    <div class="footer">Copyright &copy; Ricardo L Kenny 2019</div>
   </footer>
 
   <!-- Bootstrap JS -->
