Adds format to Summary box

--- a/Web-Visualization-Dashboard/index.html
+++ b/Web-Visualization-Dashboard/index.html
@@ -66,8 +66,8 @@
 			 is from the equator), the sharper the angle of the sun’s rays that reach it, meaning that the rays of the 
 			 sun are spread across a broader area. Therefore, higher latitudes receive less heat than lower latitude areas
 			 nearer the equator.</p>
-		  <p>2- Cloudiness and humidity are remarkably impervious to the latitude.
-             3- Higher winds affect the world temperature in all latitudes.</p>
+		  <p>2- Cloudiness and humidity are remarkably impervious to the latitude.</p>
+          <p>3- Higher winds affect the world temperature in all latitudes.</p>
           
         </div>
       </div>
