adds new face to bio page

--- a/index.html
+++ b/index.html
@@ -1,50 +1,109 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Activity 1: Basic HTML Bio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <title>Ricardo Kenny</title>
 </head>
 
+<nav class="navbar navbar-default">
+    <div class="container-fluid navigation">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="index.html" id="main-nav">
+                Ricardo Kenny
+            </a>
+        </div>
+    </div>
+</nav>
+
 <body>
+    <div class="row">
+        <div class="col-md-3 bio">
+            <section>
+                <img src="assets/RK-bio-img.png" alt="Ricardo Kenny Profile Pic" class="img-responsive RK-bio-img">
+                <p class="centered" id="bio-p">
+                    An Engineer and Data Professional, excited by the information found when exploring data. Please feel free 
+                    to reach out and get in touch!
+                </p>
+                <!-- <p id="bio-links">
+                    <a href="#">Contact</a> | <a href="#">Projects</a> | <a href="#">Something</a>
+                </p> -->
+            </section>
+        </div>
+        <section>
+            <div class="col-md-3">
+                <a href="https://rlkennye.github.io/Web-Design-Challenge/">
+                    <div class="thumbnail project" onmouseover="expand(this)" onmouseout="hide(this)">
+                        <img src="assets/weather_by_latitude.png" alt="Weather By Latitude">
+                        <div class="caption">
+                            <h3>Weather By Latitude</h3>
+                        </div>
+                        <div class="project-description">
+                            <hr> 
+                            A study of weather patterns by latitude, utilizing API calls to OpenWeatherMap to gather data on a random assortment of locations
+                            around the globe. Patterns and visualizations are presented via a responsive webpage.
+                        </div>
+                    </div>
+                </a>
+                <a href="https://rlkennye.github.io/web-scraping-challenge/">
+                    <div class="thumbnail project" onmouseover="expand(this)" onmouseout="hide(this)">
+                        <img src="assets/screenshot.png" alt="Mars Info">
+                        <div class="caption">
+                            <h3>Wave Scraping</h3>
+                        </div>
+                        <div class="project-description">
+                            <hr>
+                            A study of Mars in all it's phases
+                        </div>
+                    </div>
+                </a>
+                <a href="https://rlkennye.github.io/javascript-challenge/index.html">
+                    <div class="thumbnail project" onmouseover="expand(this)" onmouseout="hide(this)">
+                        <img src="assets/ufo-sightings.jpg" alt="UFOs outthere">
+                        <div class="caption">
+                            <h3>ufo sightings</h3>
+                        </div>
+                        <div class="project-description">
+                            <hr> 
+                            An exploration of an unusual activities with UFOs.
+                        </div>
+                    </div>
+                </a>
+            </div>
 
-  <h1>Ricardo Kenny</h1>
-
-  <img src="https://avatars1.githubusercontent.com/u/50935834?s=460&v=4" alt="Kenny Ricardo">
-
-  <p>Write a short paragraph about yourself or some placeholder text.</p>
-  <p>A second short paragraph about yourself or some placeholder text.</p>
-
-  <ul>
-    <li><strong>Email:</strong> <a href="#">ricardolkenny@gmail.com</a></li>
-  </ul>
-
-  <table>
-    <tr>
-      <th>Books</th>
-      <th>Movies</th>
-      <th>Games</th>
-    </tr>
-    <tr>
-      <td>The Hobbit</td>
-      <td>Hot Fuzz</td>
-      <td>Dark Souls</td>
-    </tr>
-    <tr>
-      <td>The Name of the Wind</td>
-      <td>The Avengers</td>
-      <td>The Last of Us</td>
-    </tr>
-    <tr>
-      <td>The Girl With All the Gifts</td>
-      <td>The Matrix</td>
-      <td>Dragon Age: Origins</td>
-    </tr>
-  </table>
-
+        </section>
+        </div>
+    </div>
 </body>
-<footer>
-  <br>
-  <a href="biostarter.html">My Other Page</a>
-</footer>
+
+
+<script>
+    function expand(panel) {
+        var description = panel.getElementsByClassName("project-description")[0]
+        description.style.display = "block"
+    }
+    function hide(panel) {
+        var description = panel.getElementsByClassName("project-description")[0]
+        description.style.display = "none"
+    }
+
+</script>
 
 </html>
