add 3 projects on first row

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                         </div>
                     </div>
                 </a>
+            </div>
+            <div class="col-md-3">
                 <a href="https://rlkennye.github.io/web-scraping-challenge/">
                     <div class="thumbnail project" onmouseover="expand(this)" onmouseout="hide(this)">
                         <img src="assets/screenshot.png" alt="Mars Info">
@@ -74,6 +76,8 @@
                         </div>
                     </div>
                 </a>
+            </div>
+            <div class="col-md-3">
                 <a href="https://rlkennye.github.io/javascript-challenge/index.html">
                     <div class="thumbnail project" onmouseover="expand(this)" onmouseout="hide(this)">
                         <img src="assets/ufo-sightings.jpg" alt="UFOs outthere">
@@ -87,7 +91,6 @@
                     </div>
                 </a>
             </div>
-
         </section>
         </div>
     </div>
